--- a/package.json
+++ b/package.json
@@ -77,21 +77,20 @@
     "packaging": "jar"
   },
   "dependencies": {
-    "@angular/animations": "^12.2.10",
-    "@angular/cdk": "^12.2.11",
-    "@angular/common": "12.2.10",
-    "@angular/compiler": "12.2.10",
-    "@angular/core": "12.2.10",
+    "@angular/animations": "^12.2.17",
+    "@angular/cdk": "^12.2.13",
+    "@angular/common": "12.2.17",
+    "@angular/compiler": "12.2.17",
+    "@angular/core": "12.2.17",
     "@angular/flex-layout": "^12.0.0-beta.35",
-    "@angular/forms": "12.2.10",
-    "@angular/google-maps": "^12.2.11",
-    "@angular/http": "^7.2.16",
-    "@angular/localize": "12.2.10",
-    "@angular/material": "^12.2.11",
-    "@angular/platform-browser": "12.2.10",
-    "@angular/platform-browser-dynamic": "12.2.10",
-    "@angular/router": "12.2.10",
-    "@angular/youtube-player": "^12.2.11",
+    "@angular/forms": "12.2.17",
+    "@angular/google-maps": "^12.2.13",
+    "@angular/localize": "12.2.17",
+    "@angular/material": "^12.2.13",
+    "@angular/platform-browser": "12.2.17",
+    "@angular/platform-browser-dynamic": "12.2.17",
+    "@angular/router": "12.2.17",
+    "@angular/youtube-player": "^12.2.17",
     "@fortawesome/angular-fontawesome": "^0.9.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-brands-svg-icons": "^5.15.4",
@@ -129,7 +128,7 @@
     "ng-jhipster": "^0.16.0",
     "ng2-adsense": "^10.0.1",
     "ng2-pdf-viewer": "^8.0.1",
-    "ng2-sticky-nav": "^10.0.0",
+    "ng2-sticky-nav": "^9.0.1",
     "ngx-audio-player": "^11.0.4",
     "ngx-bootstrap": "^7.1.0",
     "ngx-chips": "^2.2.2",
@@ -139,7 +138,7 @@
     "ngx-google-places-autocomplete": "^2.0.5",
     "ngx-iban": "^12.1.0",
     "ngx-infinite-scroll": "10.0.1",
-    "ngx-material-timepicker": "^5.5.3",
+    "ngx-material-timepicker": "^5.5.2",
     "ngx-matomo": "^0.1.4",
     "ngx-paypal": "^8.0.0",
     "ngx-quill": "^14.3.0",
@@ -162,24 +161,24 @@
     "rxjs": "6.6.7",
     "slot-machine-gen": "^1.0.1",
     "socket.io-client": "^4.4.1",
-    "swagger-ui-dist": "3.52.5",
-    "tslib": "2.3.1",
+    "swagger-ui-dist": "^5.0.0-alpha.4",
+    "tslib": "1.14.1",
     "zone.js": "0.11.4"
   },
   "devDependencies": {
-    "@angular-builders/custom-webpack": "12.1.3",
+    "@angular-builders/custom-webpack": "^15.0.0",
     "@angular-builders/jest": "12.1.2",
-    "@angular-devkit/build-angular": "12.2.10",
+    "@angular-devkit/build-angular": "^15.2.4",
     "@angular-eslint/eslint-plugin": "12.5.0",
-    "@angular/cli": "12.2.10",
-    "@angular/compiler-cli": "12.2.10",
-    "@angular/service-worker": "12.2.10",
+    "@angular/cli": "^12.2.18",
+    "@angular/compiler-cli": "12.2.17",
+    "@angular/service-worker": "12.2.17",
     "@types/core-js": "^2.5.5",
     "@types/jest": "27.0.2",
     "@types/node": "^16.11.1",
     "@typescript-eslint/eslint-plugin": "4.33.0",
     "@typescript-eslint/parser": "4.33.0",
-    "browser-sync": "2.27.5",
+    "browser-sync": "^2.29.1",
     "browser-sync-webpack-plugin": "2.3.0",
     "concurrently": "6.3.0",
     "copy-webpack-plugin": "9.0.1",
@@ -187,7 +186,7 @@
     "eslint-config-prettier": "8.3.0",
     "eslint-webpack-plugin": "3.0.1",
     "folder-hash": "4.0.1",
-    "generator-jhipster": "7.3.1",
+    "generator-jhipster": "^7.1.0",
     "husky": "7.0.2",
     "jest": "27.3.0",
     "jest-date-mock": "1.0.8",
@@ -203,7 +202,7 @@
     "ts-jest": "27.0.7",
     "typescript": "4.3.5",
     "wait-on": "6.0.0",
-    "webpack": "5.50.0",
+    "webpack": "^5.76.3",
     "webpack-bundle-analyzer": "4.5.0",
     "webpack-merge": "5.8.0",
     "webpack-notifier": "1.14.1"
