--- a/package.json
+++ b/package.json
@@ -77,29 +77,31 @@
     "packaging": "jar"
   },
   "dependencies": {
-    "@angular/animations": "^14.3.0",
+    "@angular/animations": "^15.2.6",
     "@angular/cdk": "^12.2.13",
-    "@angular/common": "14.3.0",
-    "@angular/compiler": "14.3.0",
-    "@angular/core": "14.3.0",
+    "@angular/common": "15.2.6",
+    "@angular/compiler": "15.2.6",
+    "@angular/core": "15.2.6",
     "@angular/flex-layout": "^12.0.0-beta.35",
-    "@angular/forms": "14.3.0",
+    "@angular/forms": "15.2.6",
     "@angular/google-maps": "^12.2.13",
-    "@angular/localize": "14.3.0",
+    "@angular/http": "^7.2.16",
+    "@angular/localize": "15.2.6",
     "@angular/material": "^12.2.13",
-    "@angular/platform-browser": "14.3.0",
-    "@angular/platform-browser-dynamic": "14.3.0",
-    "@angular/router": "14.3.0",
+    "@angular/platform-browser": "15.2.6",
+    "@angular/platform-browser-dynamic": "15.2.6",
+    "@angular/router": "15.2.6",
     "@angular/youtube-player": "^12.2.13",
     "@fortawesome/angular-fontawesome": "^0.9.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-brands-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
-    "@fullcalendar/angular": "^5.10.1",
-    "@fullcalendar/daygrid": "^5.10.1",
-    "@fullcalendar/interaction": "^5.10.1",
-    "@fullcalendar/list": "^5.10.1",
-    "@fullcalendar/timegrid": "^5.10.1",
+    "@fullcalendar/angular": "^6.1.5",
+    "@fullcalendar/core": "^6.1.5",
+    "@fullcalendar/daygrid": "^6.1.5",
+    "@fullcalendar/interaction": "^6.1.5",
+    "@fullcalendar/list": "^6.1.5",
+    "@fullcalendar/timegrid": "^6.1.5",
     "@ng-bootstrap/ng-bootstrap": "10.0.0",
     "@ng-idle/core": "^11.1.0",
     "@ng-idle/keepalive": "^11.0.3",
@@ -121,10 +123,11 @@
     "bootswatch": "^5.1.3",
     "dayjs": "1.10.7",
     "flatpickr": "^4.6.9",
-    "html2canvas": "^1.0.0-alpha.12",
+    "html2canvas": "1.0.0-alpha.12",
     "ibantools": "^3.3.1",
     "jspdf": "^2.4.0",
     "ng-chat": "^3.1.0",
+    "ng-jhipster": "^0.16.0",
     "ng2-adsense": "^10.0.1",
     "ng2-pdf-viewer": "^8.0.1",
     "ng2-sticky-nav": "^9.0.1",
@@ -168,10 +171,10 @@
     "@angular-builders/custom-webpack": "^15.0.0",
     "@angular-builders/jest": "12.1.2",
     "@angular-devkit/build-angular": "^15.2.4",
-    "@angular-eslint/eslint-plugin": "12.5.0",
-    "@angular/cli": "^14.2.11",
-    "@angular/compiler-cli": "14.3.0",
-    "@angular/service-worker": "14.3.0",
+    "@angular-eslint/eslint-plugin": "15.2.1",
+    "@angular/cli": "^15.2.5",
+    "@angular/compiler-cli": "15.2.6",
+    "@angular/service-worker": "15.2.6",
     "@types/core-js": "^2.5.5",
     "@types/jest": "27.0.2",
     "@types/node": "^16.11.1",
@@ -180,7 +183,7 @@
     "browser-sync": "^2.29.1",
     "browser-sync-webpack-plugin": "2.3.0",
     "concurrently": "6.3.0",
-    "copy-webpack-plugin": "9.0.1",
+    "copy-webpack-plugin": "11.0.0",
     "eslint": "7.32.0",
     "eslint-config-prettier": "8.3.0",
     "eslint-webpack-plugin": "3.0.1",
@@ -193,15 +196,15 @@
     "jest-preset-angular": "10.0.1",
     "jest-sonar-reporter": "2.0.0",
     "lint-staged": "11.2.3",
-    "merge-jsons-webpack-plugin": "1.0.21",
+    "merge-jsons-webpack-plugin": "2.0.1",
     "prettier": "2.4.1",
     "prettier-plugin-java": "1.5.0",
     "prettier-plugin-packagejson": "2.2.13",
     "rimraf": "3.0.2",
     "ts-jest": "27.0.7",
-    "typescript": "4.6.4",
+    "typescript": "~4.8.0",
     "wait-on": "6.0.0",
-    "webpack": "^5.76.3",
+    "webpack": "5.78.0",
     "webpack-bundle-analyzer": "4.5.0",
     "webpack-merge": "5.8.0",
     "webpack-notifier": "1.14.1"
