cloudbuild add logging

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,4 +1,5 @@
 steps:
+
 # Clone a public repo and write its revision to a VERSION file.
 - name: 'gcr.io/$PROJECT_ID/git'
   args: ['push', 'https://github.com/createyourevent/createyourevent.git']
@@ -7,3 +8,6 @@ steps:
   args: ['mvn','-Pprod', 'package', 'verify', 'jib:dockerBuild', '--offline', '-Dmaven.test.skip=true']
 - name: 'gcr.io/$PROJECT_ID/docker'
   args: ['run', '-d -p 8080:8080 --name createyourevent createyourevent']
+
+options:
+  logging: CLOUD_LOGGING_ONLY
