--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,6 +1,6 @@
 steps:
-- name: 'maven'
-  args: ['mvn','-Pprod', 'install', 'package', 'verify', 'jib:dockerBuild', '--offline', '-Dmaven.test.skip=true']
+  entrypoint: mvn
+  args: ['-Pprod', 'package', 'verify', 'jib:dockerBuild', '--offline', '-Dmaven.test.skip=true']
 - name: 'gcr.io/$PROJECT_ID/docker'
   args: ['run', '-d -p 8080:8080 --name createyourevent createyourevent']
 
