--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,9 +1,6 @@
 steps:
-- name: maven:3.3-jdk-8
-  entrypoint: mvn
-  args: ['package','-Dmaven.test.skip=true']
-- name: 'gcr.io/$PROJECT_ID/docker'
-  args: ['run', '-d -p 8080:8080 --name createyourevent createyourevent']
+- name: "maven"
+  args: ["mvn", "--version"]
 
 options:
   logging: CLOUD_LOGGING_ONLY
