--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,6 +1,8 @@
 steps:
-- name: "maven"
-  args: ["mvn", "-Dmaven.test.skip=true"]
+  steps:
+  - name: maven:3.3-jdk-8
+    entrypoint: mvn
+    args: ['-Dmaven.test.skip=true']
 
 options:
   logging: CLOUD_LOGGING_ONLY
