div updates miklo

--- a/package.json
+++ b/package.json
@@ -164,10 +164,12 @@
     "primeicons": "^4.1.0",
     "primeng": "^12.1.0",
     "prop-types": "^15.7.2",
+    "querystring": "^0.2.1",
     "quill": "^1.3.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "reflect-metadata": "^0.1.13",
+    "request": "^2.88.2",
     "rxjs": "6.6.7",
     "slot-machine-gen": "^1.0.1",
     "socket.io-client": "^4.4.1",
