--- a/src/main/resources/config/application-prod.yml
+++ b/src/main/resources/config/application-prod.yml
@@ -24,7 +24,7 @@ eureka:
     prefer-ip-address: true
   client:
     service-url:
-      defaultZone: https://ceo:${jhipster.registry.password}@cye-registry.createyourevent.org/eureka
+      defaultZone: https://registry.createyourevent.org/eureka/
 
 management:
   metrics:
@@ -44,9 +44,9 @@ spring:
         initial-interval: 1000
         max-interval: 2000
         max-attempts: 100
-      uri: https://ceo:${jhipster.registry.password}@cye-registry.createyourevent.org/config
+      uri: https://registry.createyourevent.org/registry/config
       # name of the config server's property source (file.yml) that we want to use
-      name: createyourevent
+      name: application.yml
       profile: prod
       label: main # toggle to switch to a different version of the configuration as stored in git
       # it can be set to any label, branch or commit of the configuration source Git repository
