--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -178,7 +178,7 @@ spring:
         registration:
           oidc:
             client-id: web_app
-            client-secret: 9f608490-949a-4d83-95b0-f77c64f374bc
+            client-secret: 0a07a541-0695-4a23-be24-df3cc5082978
             scope: openid,profile,email
 
 server:
@@ -196,7 +196,7 @@ info:
   display-ribbon-on-profiles: 'dev'
 
 keycloak:
-  configurationFile: "classpath:keycloak.json"
+  configurationFile: 'classpath:keycloak.json'
   realm: jhipster
   resource: mobile_app
   auth-server-url: https://keycloak.createyourevent.org/auth
@@ -207,8 +207,8 @@ keycloak:
   confidential-port: 0
   enabled: true
   security-constraints:
-  - auth-roles:
-    - "*"
+    - auth-roles:
+        - '*'
   securityConstraints[0].authRoles[0]: ROLE_USER
   securityConstraints[0].securityCollections[0].patterns[0]: /
 
@@ -237,10 +237,10 @@ jhipster:
     name: 'createyoureventApp'
   # By default CORS is disabled. Uncomment to enable.
   cors:
-    allowed-origins: "https://keycloak.createyourevent.org"
-    allowed-methods: "*"
-    allowed-headers: "*"
-    exposed-headers: "Authorization,Link,X-Total-Count,X-${jhipster.clientApp.name}-alert,X-${jhipster.clientApp.name}-error,X-${jhipster.clientApp.name}-params"
+    allowed-origins: 'https://keycloak.createyourevent.org'
+    allowed-methods: '*'
+    allowed-headers: '*'
+    exposed-headers: 'Authorization,Link,X-Total-Count,X-${jhipster.clientApp.name}-alert,X-${jhipster.clientApp.name}-error,X-${jhipster.clientApp.name}-params'
     allow-credentials: true
     max-age: 1800
   mail:
