--- a/src/main/docker/app-dev.yml
+++ b/src/main/docker/app-dev.yml
@@ -2,26 +2,26 @@
 version: '3.8'
 services:
   #createyourevent-app-dev:
-    #image: createyourevent
-    #user: "${UID}:${GID}"
-    #environment:
-      #- _JAVA_OPTIONS=-Xmx512m -Xms256m
-      #- SPRING_PROFILES_ACTIVE=prod,api-docs
-      #- MANAGEMENT_METRICS_EXPORT_PROMETHEUS_ENABLED=true
-      ## - EUREKA_CLIENT_SERVICE_URL_DEFAULTZONE=http://ceo:$${jhipster.registry.password}@34.72.45.31:8761/eureka
-      ## - SPRING_CLOUD_CONFIG_URI=http://ceo:$${jhipster.registry.password}@34.72.45.31:8761/config
-      #- EUREKA_CLIENT_SERVICE_URL_DEFAULTZONE=http://ceo:ihMMuka8243Schaffhausen!@createyourevent.org:18761/eureka/
-      #- SPRING_CLOUD_CONFIG_URI=http://ceo:ihMMuka8243Schaffhausen!@createyourevent.org:18761/config
-      #- SPRING_DATASOURCE_URL=jdbc:mysql://createyourevent-mysql-dev:13306/createyourevent?useUnicode=true&characterEncoding=utf8&useSSL=false&useLegacyDatetimeCode=false&serverTimezone=UTC&createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true
-      #- SPRING_LIQUIBASE_URL=jdbc:mysql://createyourevent-mysql-dev:13306/createyourevent?useUnicode=true&characterEncoding=utf8&useSSL=false&useLegacyDatetimeCode=false&serverTimezone=UTC&createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true
-      #- SPRING_SECURITY_OAUTH2_CLIENT_PROVIDER_OIDC_ISSUER_URI=https://www.createyourevent.org:19080/auth/realms/jhipster
-      #- SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_OIDC_CLIENT_ID=web_app
-      #- SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_OIDC_CLIENT_SECRET=web_app
-      #- JHIPSTER_SLEEP=10 # gives time for other services to boot before the application
-    # If you want to expose these ports outside your dev PC,
-    # remove the "127.0.0.1:" prefix
-    #ports:
-      #- 18080:8080
+  #image: createyourevent
+  #user: "${UID}:${GID}"
+  #environment:
+  #- _JAVA_OPTIONS=-Xmx512m -Xms256m
+  #- SPRING_PROFILES_ACTIVE=prod,api-docs
+  #- MANAGEMENT_METRICS_EXPORT_PROMETHEUS_ENABLED=true
+  ## - EUREKA_CLIENT_SERVICE_URL_DEFAULTZONE=http://ceo:$${jhipster.registry.password}@34.72.45.31:8761/eureka
+  ## - SPRING_CLOUD_CONFIG_URI=http://ceo:$${jhipster.registry.password}@34.72.45.31:8761/config
+  #- EUREKA_CLIENT_SERVICE_URL_DEFAULTZONE=http://ceo:ihMMuka8243Schaffhausen!@createyourevent.org:18761/eureka/
+  #- SPRING_CLOUD_CONFIG_URI=http://ceo:ihMMuka8243Schaffhausen!@createyourevent.org:18761/config
+  #- SPRING_DATASOURCE_URL=jdbc:mysql://createyourevent-mysql-dev:13306/createyourevent?useUnicode=true&characterEncoding=utf8&useSSL=false&useLegacyDatetimeCode=false&serverTimezone=UTC&createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true
+  #- SPRING_LIQUIBASE_URL=jdbc:mysql://createyourevent-mysql-dev:13306/createyourevent?useUnicode=true&characterEncoding=utf8&useSSL=false&useLegacyDatetimeCode=false&serverTimezone=UTC&createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true
+  #- SPRING_SECURITY_OAUTH2_CLIENT_PROVIDER_OIDC_ISSUER_URI=https://www.createyourevent.org:19080/auth/realms/jhipster
+  #- SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_OIDC_CLIENT_ID=web_app
+  #- SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_OIDC_CLIENT_SECRET=6fb8d2ef-bdb2-40b0-bfa4-d59a7e87e117
+  #- JHIPSTER_SLEEP=10 # gives time for other services to boot before the application
+  # If you want to expose these ports outside your dev PC,
+  # remove the "127.0.0.1:" prefix
+  #ports:
+  #- 18080:8080
   createyourevent-mysql-dev:
     image: mysql:5.7
     volumes:
@@ -66,7 +66,7 @@ services:
       - 18761:8761
   keycloak-dev:
     image: jboss/keycloak:12.0.4
-    user: "${UID}:${GID}"
+    user: '${UID}:${GID}'
     command:
       [
         '-b',
