--- a/src/main/docker/central-server-config/localhost-config/application.yml
+++ b/src/main/docker/central-server-config/localhost-config/application.yml
@@ -1,18 +1,16 @@
-# ===================================================================
-# Spring Cloud Config bootstrap configuration for the "prod" profile
-# ===================================================================
+# Common configuration shared between all applications
+configserver:
+  name: Docker JHipster Registry
+  status: Connected to the JHipster Registry running in Docker
 
-spring:
-  cloud:
-    config:
-      fail-fast: false
-      retry:
-        initial-interval: 1000
-        max-interval: 2000
-        max-attempts: 100
-      uri: https://registry.createyourevent.org/registry/config
-      # name of the config server's property source (file.yml) that we want to use
-      name: application.yml
-      profile: prod # profile(s) of the property source
-      label: main # toggle to switch to a different version of the configuration as stored in git
-      # it can be set to any label, branch or commit of the configuration source Git repository
+jhipster:
+  security:
+    oauth2:
+      audience:
+        - account
+        - api://default
+
+eureka:
+  client:
+    service-url:
+      defaultZone: https://registry.createyourevent.org/eureka/
